--- a/LGPL/CommonSoftware/eventGUI/html/concepts/maintopic.html
+++ b/LGPL/CommonSoftware/eventGUI/html/concepts/maintopic.html
@@ -12,6 +12,13 @@ The eventGUI is intended as a replacement for the Python-based acseventbrowser,
 which has shown stability problems in the past. The new, Eclipse RCP (Java)-based
 eventGUI does not include all the functionality that was offered by its
 predecessor, but should be easier to use and understand.
+<br>
+<table class="../images/eventGUI.png">
+<caption align="bottom"><b>The main Event GUI screen, with the Event Detail View displayed in the lower right-hand quadrant.</b></caption>
+<tr><td><img src="../images/eventGUI.png"></td></tr>
+</table>
+<br>
+<!-- <img src="../images/eventGUI.png" alt="eventGUI default screen" /> <!-- width="100%" height="100%" -->
 
 There are three principal views:
 <h2>Service Summary View</h2>
