Replaced ContainerServices with ContainerServicesBase to allow putting this module before jcont.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@150221 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acscallbacks/src/alma/acs/callbacks/package.html
+++ b/LGPL/CommonSoftware/acscallbacks/src/alma/acs/callbacks/package.html
@@ -35,7 +35,7 @@ import java.util.logging.Logger;
 import alma.acs.callbacks.RequesterUtil;
 import alma.acs.callbacks.ResponseReceiver;
 import alma.acs.commandcenter.meta.Firestarter;
-import alma.acs.container.ContainerServices;
+import alma.acs.container.ContainerServicesBase;
 
 import alma.mysubsystem.Responder;
 
@@ -48,7 +48,7 @@ public class DemoRequester {
 
         Firestarter.configure(null, "te1.hq.eso.org", "3500");
         Firestarter.prepare();
-        ContainerServices cs = Firestarter.giveContainerServices();
+        ContainerServicesBase cs = Firestarter.giveContainerServices();
         Logger logger = cs.getLogger();
 
         Responder responder = ResponderHelper.narrow(cs.getComponent("RESPONDER"));
